<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/place_detail_toolbar_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:scaleType="centerCrop"/>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_edit_yellow_24dp"/>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <TextView
                    android:id="@+id/place_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/titleBackground"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:text="@string/place_title_text_view"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    >

                    <android.support.v7.widget.LinearLayoutCompat
                        style="@style/MyLinearLayoutStyle"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/MyLinearLayoutStyle"
                            android:src="@drawable/ic_place_grey_24dp"/>

                        <TextView
                            android:id="@+id/place_address"
                            style="@style/place_detail_text_view"
                            android:text="@string/place_adress_text_view"/>
                    </android.support.v7.widget.LinearLayoutCompat>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/titleBackground"/>


                    <android.support.v7.widget.LinearLayoutCompat
                        style="@style/MyLinearLayoutStyle"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/call_image_view"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@color/colorBackground"
                            android:src="@drawable/ic_call_green_24dp"/>

                        <TextView
                            android:id="@+id/place_telephone"
                            style="@style/place_detail_text_view"
                            android:text="@string/place_phone_text_view"/>
                    </android.support.v7.widget.LinearLayoutCompat>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/titleBackground"/>

                    <android.support.v7.widget.LinearLayoutCompat
                        style="@style/MyLinearLayoutStyle"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/MyLinearLayoutStyle"
                            android:src="@drawable/ic_query_builder_white_24dp"/>

                        <TextView
                            android:id="@+id/place_worktime"
                            style="@style/place_detail_text_view"
                            android:text="@string/place_work_time_text_view"/>
                    </android.support.v7.widget.LinearLayoutCompat>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/titleBackground"/>

                    <android.support.v7.widget.LinearLayoutCompat
                        style="@style/MyLinearLayoutStyle"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/MyLinearLayoutStyle"
                            android:layout_marginTop="4dp"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_star_gold_24dp"/>

                        <RatingBar
                            android:id="@+id/place_detail_rating_bar"
                            style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"/>
                    </android.support.v7.widget.LinearLayoutCompat>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/titleBackground"/>

                    <android.support.v7.widget.LinearLayoutCompat
                        style="@style/MyLinearLayoutStyle"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/MyLinearLayoutStyle"
                            android:src="@drawable/ic_free_breakfast_black_24dp"/>

                        <TextView
                            android:id="@+id/place_type_text_view"
                            style="@style/place_detail_text_view"
                            android:text="@string/place_type"/>
                    </android.support.v7.widget.LinearLayoutCompat>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/titleBackground"/>


                </LinearLayout>
            </LinearLayout>


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@color/colorBackground"
                android:padding="8dp"
                android:paddingBottom="8dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="4dp"
                >

                <TextView
                    android:id="@+id/place_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"
                    android:padding="8dp"
                    android:text="@string/lorem_ipsum"/>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
